<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:weightSum="1">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_title_label"/>

    <EditText
        android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:text="@string/note_detail_label"/>


    <EditText
        android:id="@+id/note_body"
        android:layout_width="match_parent"
        android:layout_height="332dp"
        android:gravity="start"
        android:hint="@string/note_content_hint"
        android:textAlignment="textStart"
        android:typeface="normal" />

    <CheckedTextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/auto_save_content_description"
        android:textColor="@color/kindaGrey" />

</LinearLayout>